--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -101,7 +101,7 @@ jobs:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1.7.2
         with:
-          dotnet-version: 8
+          dotnet-version: 8.0.x
 
       - name: Build Project
         shell: bash
