Updated read loop statistics.

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -155,6 +155,7 @@ jobs:
     name: Notify Users
     runs-on: ubuntu-latest
     needs:
+      - release
       - build-and-upload
     steps:
       - name: Discord Notification
